wallet/kustomize/wallet/overlays/local/wallet/router/ingress.yml
# 
# Copyright SecureKey Technologies Inc. All Rights Reserved. 
# 
# SPDX-License-Identifier: Apache-2.0 
# 

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: router
  labels:
    app: router
    component: hub-router
    group: core
spec:
  tls:
  - hosts:
      - $(ROUTER_SERVICE_NAME).||DOMAIN||
    secretName: $(INGRESS_TLS_SECRET)
  rules:
  - host: $(ROUTER_SERVICE_NAME).||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: router
            port:
              name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
#    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
#    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
  name: router-ws
  labels:
    app: router
    component: hub-router
    group: core
spec:
  tls:
  - hosts:
      - $(ROUTER_WS_SERVICE_NAME).||DOMAIN||
    secretName: $(INGRESS_TLS_SECRET)
  rules:
  - host: $(ROUTER_WS_SERVICE_NAME).||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: router-ws
            port:
              name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: router-api
  labels:
    app: router
    component: hub-router
    group: core
spec:
  tls:
  - hosts:
      - $(ROUTER_API_SERVICE_NAME).||DOMAIN||
    secretName: $(INGRESS_TLS_SECRET)
  rules:
  - host: $(ROUTER_API_SERVICE_NAME).||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: router-api
            port:
              name: http
